<resources>
    <string name="app_name">Campo</string>

    <string name="login_field">ID or e-mail</string>
    <string name="password_field">Password</string>
    <string name="login_button">Login</string>

    <string name="data_file_name">PasswordLogin</string>

    <string name="enter_message">Enter your message…</string>

    <string name="create_dialog_title">Create new dialog</string>
    <string name="create_dialog_edit_hint">Dialog title</string>
    <string name="create_dialog_friends_list">Friends</string>

    <string name="toggle_button_open">open</string>
    <string name="toggle_button_close">close</string>

    <string name="nav_title_contacts">Contacts</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_title_exit">Exit</string>

    <string name="contacts_list_header">Contacts</string>

    <string name="add_new_contact_id">User id</string>
    <string name="add_new_contact_button">Add</string>

    <string name="change_user_information_name">Name</string>
    <string name="change_user_information_surname">Surname</string>
    <string name="change_user_information_patronymic">Patronymic</string>
    <string name="change_user_information_sex">Sex</string>
    <string name="change_user_information_submit_btn">Submit</string>
    <string name="change_user_information_woman">Woman</string>
    <string name="change_user_information_man">Man</string>

    <string name="test">test</string>

    <string name="delete_chat_menu_text">delete</string>


</resources>





